# super-swipe-type

./: .gitignore  Cargo.toml  README.md
crates/super-swipe-type/: Cargo.toml
crates/super-swipe-type/assets/dictionaries/: en_bigrams.fst  en_us_bigrams.fst  en_us_wordlist.fst  en_wordlist.fst
crates/super-swipe-type/assets/models/: fix_decoder_dims.py  model_checker.py
crates/super-swipe-type/src/: beam_search.rs  decoder.rs  dictionary.rs  encoder.rs  keyboard_manager.rs  lib.rs  swipe_orchestrator.rs  swipe_trajectory_processor.rs  tests.rs  wordlist.rs
crates/vocab-builder/: Cargo.toml
crates/vocab-builder/assets/: dupe_detector.py  dupe_remover.py  en_us_wordlist  en_wordlist
crates/vocab-builder/assets/google/: download_ngrams.sh
crates/vocab-builder/src/: main.rs
src/: beam_search.rs  decoder.rs  encoder.rs  keyboard_grid.rs  keyboard_manager.rs  lib.rs  swipe_orchestrator.rs  swipe_trajectory_processor.rs  tensor_factory.rs
testing/: swipes.json
