[package]
name = "super-swipe-type"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
fst = "0.4.7"
memmap = "0.7.0"
ort = "2.0.0-rc.12"
regex-automata = { version = "0.1.9", features = ["transducer"] }
vector2 = "0.1.5"
regex = "1.12.3"

[dev-dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
